# Claude-Experiment

./: .gitignore  CMakeLists.txt  README.md  build.bat
Libraries/include/glad/: glad.h
src/: VoxelGame.cpp  VoxelGame.hpp  glad.c  main.cpp
src/Core/: Application.cpp  Application.hpp  Window.cpp  Window.hpp
src/Renderer/: Camera.cpp  Camera.hpp  Mesh.cpp  Mesh.hpp  Screenshot.cpp  Screenshot.hpp  Shader.cpp  Shader.hpp  ShadowMap.cpp  ShadowMap.hpp  Texture.cpp  Texture.hpp
src/Voxel/: Chunk.cpp  Chunk.hpp  VoxelRenderer.cpp  VoxelRenderer.hpp
